--- a/templates/add_registrar.html
+++ b/templates/add_registrar.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
-<head><title>Add Registrar</title></head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Add Registrar</title>
+</head>
 <body>
   <h2>Create Registrar Account</h2>
   <form method="POST">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
     <label>Username:<input name="username" required></label><br>
     <label>Email:<input type="email" name="email" required></label><br>
     <label>Password:<input type="password" name="password" required></label><br>
