--- a/templates/attendance_summary.html
+++ b/templates/attendance_summary.html
@@ -1,16 +1,11 @@
 <!-- templates/attendance_summary.html -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Attendance Summary</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}Attendance Summary{% endblock %}
+{% block content %}
   <h2>Attendance Summary</h2>
   <ul>
-    {% for course, info in summary.items() %}
-      <li>{{ course }}: {{ info }}</li>
+    {% for status, count in summary.items() %}
+      <li>{{ status }}: {{ count }} students</li>
     {% endfor %}
   </ul>
-</body>
-</html>
+{% endblock %}
