--- a/templates/login.html
+++ b/templates/login.html
@@ -1,28 +1,21 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Login</title>
-</head>
-<body>
-    <h2>User Login</h2>
-    {% with messages = get_flashed_messages(with_categories=true) %}
-      {% if messages %}
-        {% for category, message in messages %}
-          <p style="color: red;">{{ message }}</p>
-        {% endfor %}
-      {% endif %}
-    {% endwith %}
+{% extends "base.html" %}
+
+{% block content %}
+<h2>Login</h2>
+<form method="POST">
+    <!-- Add CSRF Token Field -->
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
     
-    <form method="POST">
-        <label>Email:</label><br>
-        <input type="email" name="email" required><br><br>
-
-        <label>Password:</label><br>
-        <input type="password" name="password" required><br><br>
-
-        <input type="submit" value="Login">
-    </form>
-
-   
-</body>
-</html>
+    <div class="form-group">
+        <label>Username</label>
+        <input type="text" name="username" class="form-control" required>
+    </div>
+    
+    <div class="form-group">
+        <label>Password</label>
+        <input type="password" name="password" class="form-control" required>
+    </div>
+    
+    <button type="submit" class="btn btn-primary">Login</button>
+</form>
+{% endblock %}
