--- a/templates/dashboard_admin.html
+++ b/templates/dashboard_admin.html
@@ -62,6 +62,9 @@
                     <a href="{{ url_for('add_registrar') }}" class="btn btn-warning btn-block">
                         Add Registrar
                     </a>
+                    <a href="{{ url_for('manage_semesters') }}" class="btn btn-secondary btn-block">
+                        Manage Semesters
+                    </a>
                 </div>
             </div>
         </div>
