--- a/templates/dashboard_student.html
+++ b/templates/dashboard_student.html
@@ -22,6 +22,7 @@
             </div>
         </div>
 
+
         <!-- Academic Overview -->
         <div class="col-md-8">
             <div class="card mb-4">
@@ -53,6 +54,9 @@
                             {% endfor %}
                         </tbody>
                     </table>
+                            <a href="{{ url_for('my_instructors') }}" class="btn btn-primary">
+    <i class="bi bi-people"></i> View Instructors
+</a>
                     
                     <div class="mt-4">
                         <h5>Quick Links</h5>
